...
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_width="0dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/text_note_title" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_courses"
            app:layout_constraintEnd_toEndOf="@+id/spinner_courses"
            app:layout_constraintStart_toStartOf="@+id/spinner_courses" android:hint="@string/note_title"
            android:autofillHints="" tools:targetApi="o"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/text_note_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_note_title"
            app:layout_constraintEnd_toEndOf="@+id/text_note_title"
            app:layout_constraintStart_toStartOf="@+id/text_note_title" android:hint="@string/note_text"
            android:importantForAutofill="no" tools:targetApi="o"/>
</android.support.constraint.ConstraintLayout>
